Fix TypeScript build errors - remove unused imports

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Goddess of Nails and Beauty - Premium nail care, BIAB, gel manicures, pedicures, lash lifts, and brow lamination in Melbourne" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://goddessofnailsandbeauty.com/" />
+    <meta property="og:title" content="Goddess of Nails and Beauty - Premium Nail & Beauty Services" />
+    <meta property="og:description" content="Premium nail care, BIAB, gel manicures, pedicures, lash lifts, and brow lamination in Melbourne" />
+    <meta property="og:image" content="/goddess_logo.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://goddessofnailsandbeauty.com/" />
+    <meta property="twitter:title" content="Goddess of Nails and Beauty - Premium Nail & Beauty Services" />
+    <meta property="twitter:description" content="Premium nail care, BIAB, gel manicures, pedicures, lash lifts, and brow lamination in Melbourne" />
+    <meta property="twitter:image" content="/goddess_logo.jpg" />
+
     <title>Goddess of Nails and Beauty - Premium Nail & Beauty Services</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
